--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -186,7 +186,7 @@ BACK_PAGE: "<"
 
 S_B_1 : "ᴀᴅᴅ ᴍᴇ ᴅᴀʀʟɪɴɢ 😍"
 S_B_2 : "sᴜᴘᴘᴏʀᴛ"
-S_B_3 : "sᴜᴍᴍᴏɴ ᴍᴇ "
+S_B_3 : "ᴀᴅᴅ ᴍᴇ ᴅᴀʀʟɪɴɢ 😍"
 S_B_4 : "ᴄᴏᴍᴍᴀɴᴅs"
 S_B_5 : "sᴏᴜʟ 💋"
 S_B_6 : "ᴡᴀʀ ʀᴏᴏᴍ 🍃"
